...
        alignItems: 'center',
        justifyContent: 'flex-start',
        width: '100%',
      }}
    >
      <Ionicons name="chevron-left" size={22} color="#1F7FE5" />
      <Text style={{ color: "#1F7FE5", fontSize: 16, fontFamily: 'Rubik-Medium' }}>Back</Text>
    </TouchableOpacity>
  );
}

